Fixed: Page Licensor Revision History wrap issue

--- a/components/page-ref-licensorcountry/page-ref-licensorcountry.less
+++ b/components/page-ref-licensorcountry/page-ref-licensorcountry.less
@@ -581,3 +581,7 @@ page-ref-licensorcountry .col-sm-5 .form-control{
 rn-grid-report-configuration thead, rn-grid-report-configuration tfoot, rn-grid-revision-history thead, rn-grid-revision-history tfoot{
 	border-left: 0px solid #868080;
 }
+
+rn-grid-revision-history table td.commentText{
+	white-space: normal;
+}
